Allow longer before selecting tab on mobile to prevent premature selection while dragging.

--- a/app/components/blackout-tabs-slider/style.scss
+++ b/app/components/blackout-tabs-slider/style.scss
@@ -150,7 +150,7 @@ $scrollbar-height:17px;
     @media #{$tablet-and-up} {
       margin-top:19px;
     }
-    margin-bottom:-2px;
+    margin-bottom:2px;
     @include unselectable;
   }
   
@@ -232,7 +232,7 @@ $scrollbar-height:17px;
   color: $bg-dark-lighter-2x;
   
   .ellipses { // Text
-    margin-bottom:-5px;
+    margin-bottom:-1px;
   }
   
   &:hover {
